added pt and en languagem to website

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#17a2b8" />
+  <meta name="theme-color" content="#171941" />
   <meta name="description" content="Portifólio de Alexander Augusto" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
