changes in services and main text in home

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#256de5" />
-  <meta name="description" content="Portifolio de Alexander Augusto" />
+  <meta name="theme-color" content="#ffc107" />
+  <meta name="description" content="Portifólio de Alexander Augusto" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
